- Made it so that iNdependence will terminate if it can't initialize properly (eg. bad iTunes version)
- Fixed iTunes version detection on international (ie. non North American localized) computers
- Added handling for case where SSH is connecting to the phone for the first time (doesn't know about IP address)
- Also added handling for case where SSH fails because there is an invalid entry in ~/.ssh/known_hosts.  iNdependence will offer to remove the invalid entry.
- Added wait dialog when removing applications (restarting Springboard)
- Fixed bug where, after removing SSH, the install/remove SSH buttons weren't being updated properly
- Added better wallpaper filename handling


v1.2.2 (Coopers) - 10/15/07

- Fixed up problems with the wait dialog/sheet being too small on occasion
- Got everything working on firmware version 1.1.1
- Added firmware version detection so that iNdependence cannot be used with unsupported firmware versions
- Added firmware tab which contains functions related to upgrading and downgrading the phone's firmware (mainly between 1.0.2 and 1.1.1)
- Numerous bugfixes for the status bar (and probably some new bugs too)


v1.2.3 (De Koninck) - 10/16/07

- Fixed bug with SFTP failing on pre-1.1.1 upgrade step under some circumstances
- Numerous documentation bugfixes
- Added SpringBoard patch to enable 3rd party applications
- Integrated the post-1.1.1 upgrade step into jailbreak to make things easier
- Made the search for fstab on /dev/rdisk0s1 more robust
- Fixed bug where, after jailbreak, the status bar would continue to report phone as being in recovery mode
- Fixed the Customize tab


v1.2.4 (Dogfish Head)

- Made it so that iTunes version detection can find iTunes even if it's not in the default location (/Applications/iTunes.app)
- Fixed a spelling error in the afc2 process label in the modified Services.plist file
- Fixed a problem with setting the permissions on applications that have a space in the name